// pickle/backend/proto/scheduler.proto
syntax = "proto3";

package scheduler;
option go_package = "github.com/carlostbanks/pickle/proto";

// We'll handle the HTTP annotations differently - removing for now
// import "google/api/annotations.proto";

service SchedulerService {
  // Court operations
  rpc GetCourts(GetCourtsRequest) returns (GetCourtsResponse);
  rpc GetCourt(GetCourtRequest) returns (Court);
  
  // Booking operations
  rpc CreateBooking(CreateBookingRequest) returns (Booking);
  rpc GetBookings(GetBookingsRequest) returns (GetBookingsResponse);
  rpc UpdateBooking(UpdateBookingRequest) returns (Booking);
  rpc CancelBooking(CancelBookingRequest) returns (CancelBookingResponse);
}

message Court {
  string id = 1;
  string name = 2;
  string address = 3;
  double latitude = 4;
  double longitude = 5;
  int32 number_of_courts = 6;
  repeated string amenities = 7;
  string image_url = 8;
}

message GetCourtsRequest {
  string city = 1;
  double latitude = 2;
  double longitude = 3;
  int32 radius_km = 4; // Search radius in kilometers
}

message GetCourtsResponse {
  repeated Court courts = 1;
}

message GetCourtRequest {
  string court_id = 1;
}

message Booking {
  string id = 1;
  string court_id = 2;
  string user_id = 3;
  string date = 4; // ISO format date
  string start_time = 5; // 24-hour format HH:MM
  string end_time = 6; // 24-hour format HH:MM
  int32 number_of_players = 7;
  repeated string player_emails = 8;
  BookingStatus status = 9;
  string created_at = 10;
  string updated_at = 11;
}

enum BookingStatus {
  PENDING = 0;
  CONFIRMED = 1;
  CANCELLED = 2;
}

message CreateBookingRequest {
  string court_id = 1;
  string date = 2;
  string start_time = 3;
  string end_time = 4;
  int32 number_of_players = 5;
  repeated string player_emails = 6;
}

message GetBookingsRequest {
  string user_id = 1;
  string court_id = 2;
  string date = 3;
}

message GetBookingsResponse {
  repeated Booking bookings = 1;
}

message UpdateBookingRequest {
  string booking_id = 1;
  string start_time = 2;
  string end_time = 3;
  int32 number_of_players = 4;
  repeated string player_emails = 5;
}

message CancelBookingRequest {
  string booking_id = 1;
}

message CancelBookingResponse {
  bool success = 1;
  string message = 2;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string picture = 4;
  string created_at = 5;
}